feat: add production work queue
